@@ -11,7 +11,7 @@ my $data = [
     [( 4 .. 6 )],
 ];
 
-my $table = Spreadsheet::HTML->new( data => $data, col => { span => 3, width => '100' } );
+my $table = Spreadsheet::HTML->new( data => $data, col => { span => 3, width => '100' }, sorted_attrs => 1 );
 
 is $table->generate,
     '<table><colgroup><col span="3" width="100" /></colgroup><tr><th>a</th><th>b</th><th>c</th></tr><tr><td>1</td><td>2</td><td>3</td></tr><tr><td>4</td><td>5</td><td>6</td></tr></table>',
