@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 0.39
+    - added sorted_attrs literal param
 
 0.38
     - require HTML::AutoTag v0.07 (unsorted attributes)
